{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 7,
  "lineage": "73743598-6137-1a4e-b33f-f0847e1e08a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-049489eedd06534ea",
            "id": "rtb-049489eedd06534ea",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022b9fcf28dccd4a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "dev",
              "Name": "rtb-hshdim-dev-an2-pri"
            },
            "tags_all": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "dev",
              "Name": "rtb-hshdim-dev-an2-pri"
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pri-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-03b82f1588cfe66f1",
            "id": "rtb-03b82f1588cfe66f1",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022b9fcf28dccd4a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "dev",
              "Name": "rtb-hshdim-dev-an2-pri-db"
            },
            "tags_all": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "dev",
              "Name": "rtb-hshdim-dev-an2-pri-db"
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-0e2ef65b636115d95",
            "id": "rtb-0e2ef65b636115d95",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a599b2dd6f826e98",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "dev",
              "Name": "rtb-hshdim-dev-an2-pub"
            },
            "tags_all": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "dev",
              "Name": "rtb-hshdim-dev-an2-pub"
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}